example-deployment/k8s/keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-db
  labels:
    app: keycloak
    tier: db
spec:
  selector:
    app: keycloak
    tier: db
  ports:
    - port: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-db
  labels:
    app: keycloak
    tier: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
      tier: db
  template:
    metadata:
      labels:
        app: keycloak
        tier: db
    spec:
      containers:
        - name: postgresql
          image: postgres:13
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: keycloak-db
      volumes:
        - name: keycloak-db
          persistentVolumeClaim:
            claimName: keycloak-db
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
    tier: app
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: keycloak
    tier: app
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  labels:
    app: keycloak
    tier: app
spec:
  tls:
    - hosts:
      - ntu.demo.open-rmf.org
  rules:
    - host: ntu.demo.open-rmf.org
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
    tier: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
      tier: app
  template:
    metadata:
      labels:
        app: keycloak
        tier: app
    spec:
      containers:
        - name: keycloak
          image: rmf-web/keycloak
          imagePullPolicy: Never # remove this in a real deployment

          ports:
          - name: http
            containerPort: 8080
          - name: https
            containerPort: 8443
          readinessProbe:
            httpGet:
              path: /auth/realms/master
              port: 8080
