example-deployment/k8s/reporting-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: reporting-server-db
  labels:
    app: reporting-server
    tier: db
spec:
  selector:
    app: reporting-server
    tier: db
  ports:
    - port: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reporting-server-db
  labels:
    app: reporting-server
    tier: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reporting-server
      tier: db
  template:
    metadata:
      labels:
        app: reporting-server
        tier: db
    spec:
      containers:
        - name: postgresql
          image: postgres:13
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: reporting-server-db
      volumes:
        - name: reporting-server-db
          persistentVolumeClaim:
            claimName: reporting-server-db
---
apiVersion: v1
kind: Service
metadata:
  name: reporting-server
  labels:
    app: reporting-server
    tier: app
spec:
  type: LoadBalancer
  selector:
    app: reporting-server
    tier: app
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
      name: report
    - protocol: TCP
      port: 8003
      targetPort: 8003
      name: fluentd
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reporting-server
  labels:
    app: reporting-server
    tier: app
spec:
  selector:
    matchLabels:
      app: reporting-server
      tier: app
  template:
    metadata:
      labels:
        app: reporting-server
        tier: app
    spec:
      containers:
        - name: reporting-server
          image: rmf-web/reporting-server
          imagePullPolicy: Never # remove this in a real deployment
          ports:
            - containerPort: 8002
              name: report
            - containerPort: 8003
              name: fluentd
          volumeMounts:
            - mountPath: /jwt-configmap
              name: jwt-pub-key
            - mountPath: /reporting-server-config
              name: reporting-server-config
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      volumes:
        - name: jwt-pub-key
          configMap:
            name: jwt-pub-key
        - name: reporting-server-config
          configMap:
            name: reporting-server-config
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reporting-server
  labels:
    app: reporting-server
    tier: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
      - ntu.demo.open-rmf.org
  rules:
    - host: ntu.demo.open-rmf.org
      http:
        paths:
          - path: /logserver/api/v1(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: reporting-server
                port:
                  number: 8002
